# periodRTOS

./: BUILD_GUIDE.md  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
boards/stm32f3_discovery/: board_init.c  init.c  linker.ld
boards/stm32f4_discovery/: STM32F407VGTx_FLASH.ld  board_init.c  init.c  startup_stm32f407xx.s
cmake/: arm-none-eabi.cmake  board_config.cmake  scheduler_config.cmake
examples/: basic_periodic_tasks.c  vendor_hal_example.c
include/: bsp_interface.h  hal_interface.h  periodRTOS.h  port_interface.h  scheduler_interface.h  stm32f303xx.h  stm32f4xx.h
src/bsp/: bsp_manager.c  stm32f3_discovery_bsp.c
src/hal/: hal_manager.c  stm32_hal.c  stm32_hal_plugin.c  syscalls.c
src/kernel/: context_switch.S  kernel.c
src/monitor/: monitor.c
src/port/: port_manager.c  stm32f3_port.c
src/scheduler/: edf_scheduler.c  rm_scheduler.c  rm_scheduler_plugin.c  scheduler_manager.c
src/timer/: systick.c
